--- a/P03AplikacjaPogoda/MainWindow.xaml
+++ b/P03AplikacjaPogoda/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         
@@ -19,9 +19,20 @@
             <RowDefinition Height="100" />
         </Grid.RowDefinitions>
 
+        <StackPanel  Grid.Row="0" Grid.Column="0">
+            <StackPanel Orientation="Horizontal" >
+                <Button Margin="10 0 0 0" x:Name="btnWczytajPogode" Click="btnWczytajPogode_Click" Height="50" Content="Wczytaj Async 1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button Margin="10 0 0 0" x:Name="btnWczytajPogode2" Click="btnWczytajPogode2_Click" Height="50" Content="Wczytaj Async 2 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button Margin="10 0 0 0" x:Name="btnWczytajPogode3" Click="btnWczytajPogode3_Click" Height="50" Content="Wczytaj Async 3 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" >
+                <Button Margin="10 0 0 0" x:Name="btnWczytajPogode4" Click="btnWczytajPogode4_Click" Height="50" Content="Wczytaj Async 4 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button Margin="10 0 0 0" x:Name="btnWczytajPogode5" Click="btnWczytajPogode5_Click" Height="50" Content="Wczytaj Async 5 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button Margin="10 0 0 0" x:Name="btnWczytajPogode6" Click="btnWczytajPogode6_Click" Height="50" Content="Wczytaj Async 6 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            </StackPanel>
+        </StackPanel>
         
-        <Button x:Name="btnWczytajPogode" Click="btnWczytajPogode_Click" Grid.Row="0" Grid.Column="0" Height="50" Content="Wczytaj pogode" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-
+       
         <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1" >
             <Label   Content="Podaj miasta, dla których chcesz uzyskać temperature"></Label>
             <TextBox AcceptsReturn="True" x:Name="txtMiasto" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
