--- a/P03AplikacjaPogoda/MainWindow.xaml
+++ b/P03AplikacjaPogoda/MainWindow.xaml
@@ -6,6 +6,16 @@
         xmlns:local="clr-namespace:P03AplikacjaPogoda"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Margin" Value="10 0 0 0" />
+            <Setter Property="Width" Value="100"></Setter>
+            <Setter Property="Background" Value="{StaticResource PodstawowyKolor}"></Setter>
+            <Setter Property="FontStyle" Value="Normal"></Setter>
+        </Style>
+    </Window.Resources>
+    
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -21,14 +31,14 @@
 
         <StackPanel  Grid.Row="0" Grid.Column="0">
             <StackPanel Orientation="Horizontal" >
-                <Button  Width="100" Margin="10 0 0 0" x:Name="btnWczytajPogode" Click="btnWczytajPogode_Click" Height="50" Content="Wczytaj Async 1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <Button  Width="100" Margin="10 0 0 0" x:Name="btnWczytajPogode2" Click="btnWczytajPogode2_Click" Height="50" Content="Wczytaj Async 2 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <Button  Width="100" Margin="10 0 0 0" x:Name="btnWczytajPogode3" Click="btnWczytajPogode3_Click" Height="50" Content="Wczytaj Async 3 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button   x:Name="btnWczytajPogode"  Click="btnWczytajPogode_Click" Height="50" Content="Wczytaj Async 1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button  x:Name="btnWczytajPogode2" Click="btnWczytajPogode2_Click" Height="50" Content="Wczytaj Async 2 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button   x:Name="btnWczytajPogode3" Click="btnWczytajPogode3_Click" Height="50" Content="Wczytaj Async 3 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" >
-                <Button  Width="100" Margin="10 0 0 0" x:Name="btnWczytajPogode4" Click="btnWczytajPogode4_Click" Height="50" Content="Wczytaj Async 4 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <Button  Width="100" Margin="10 0 0 0" x:Name="btnWczytajPogode5" Click="btnWczytajPogode5_Click" Height="50" Content="Wczytaj Async 5 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <Button  Width="100" Margin="10 0 0 0" x:Name="btnWczytajPogode6" Click="btnWczytajPogode6_Click" Height="50" Content="Wczytaj Async 6 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button x:Name="btnWczytajPogode4" Click="btnWczytajPogode4_Click" Height="50" Content="Wczytaj Async 4 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button x:Name="btnWczytajPogode5" Click="btnWczytajPogode5_Click" Height="50" Content="Wczytaj Async 5 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Button x:Name="btnWczytajPogode6" Click="btnWczytajPogode6_Click" Height="50" Content="Wczytaj Async 6 " HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </StackPanel>
         </StackPanel>
         
@@ -43,5 +53,7 @@
         <ListBox x:Name="lbWynik" Grid.Row="1" Grid.Column="1" ></ListBox>
 
         <ProgressBar x:Name="pbPostep" Grid.Row="2" Grid.Column="1"></ProgressBar>
+
+        <Button Style="{StaticResource klasaPrzyciski}" Grid.Column="0" Grid.Row="2"></Button>
     </Grid>
 </Window>
